@@ -41,13 +41,13 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
     /**#@-*/
 
     /**
-     *  Memcacheクラスのコンストラクタ
+     *  _load
      *
-     *  @access public
+     *  @access protected
      */
-    function Ethna_Plugin_Cachemanager_Memcache(&$controller)
+    function _load()
     {
-        parent::Ethna_Plugin_Cachemanager($controller);
+        parent::_load();
         $this->memcache_pool = array();
     }
 
@@ -101,7 +101,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
      */
     function _getMemcacheInfo($cache_key, $namespace)
     {
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
 
         $memcache_info = $this->config['info'];
         $default_memcache_host = $this->config['host'];
@@ -149,7 +149,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
             return Ethna::raiseError('memcache server not available', E_CACHE_NO_VALUE);
         }
 
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
 
         $cache_key = $this->_getCacheKey($namespace, $key);
         if ($cache_key == null) {
@@ -188,7 +188,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
             return Ethna::raiseError('memcache server not available', E_CACHE_NO_VALUE);
         }
 
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
 
         $cache_key = $this->_getCacheKey($namespace, $key);
         if ($cache_key == null) {
@@ -231,7 +231,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
             return Ethna::raiseError('memcache server not available', E_CACHE_NO_VALUE);
         }
 
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
 
         $cache_key = $this->_getCacheKey($namespace, $key);
         if ($cache_key == null) {
@@ -256,7 +256,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
             return Ethna::raiseError('memcache server not available', E_CACHE_NO_VALUE);
         }
 
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
 
         $cache_key = $this->_getCacheKey($namespace, $key);
         if ($cache_key == null) {
@@ -283,7 +283,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
         }
 
         // ロック用キャッシュデータを利用する
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
         $cache_key = "lock::" . $this->_getCacheKey($namespace, $key);
         $lock_lifetime = 30;
 
@@ -318,7 +318,7 @@ class Ethna_Plugin_Cachemanager_Memcache extends Ethna_Plugin_Cachemanager
             return Ethna::raiseError('memcache server not available', E_CACHE_LOCK_ERROR);
         }
 
-        $namespace = is_null($namespace) ? $this->namespace : $namespace;
+        $namespace = $this->getNamespace($namespace);
         $cache_key = "lock::" . $this->_getCacheKey($namespace, $key);
 
         $this->memcache->delete($cache_key, -1);
